# libxml-xemmai

./: CMakeLists.txt  Makefile.am  README.md  configure.ac  libxml-xemmai.vcxproj
libxml/xemmai/: Makefile.am  curl.h  io.cc  io.h  libxml.cc  libxml.h  reader.cc  reader.h  writer.cc  writer.h
src/: CMakeLists.txt  Makefile.am  curl.h  io.cc  io.h  libxml.cc  libxml.h  reader.cc  reader.h  writer.cc  writer.h
test/: CMakeLists.txt  Makefile.am  reader.xm  writer.xm
